[package]
name = "mcu-link"
version = "0.1.0"
authors = ["Willy Jacobs <wn.jacobs@gmail.com>"]
edition = "2018"

description = "MCU-LINK"
#documentation = "https://docs.rs/crate/stm32g0x-hal"

license = "0BSD"
readme = "README.md"
#repository = "https://github.com/stm32-rs/stm32g0xx-hal"

[dependencies]
lpc55-hal = "0.0.4"
cortex-m-rt = "0.6"
#embedded-hal= "0.2"
#nb = "0.1.1"
#panic-halt = "0.2"
#cortex-m = "0.6.3"
#stm32f0xx-hal = {version = "0.17", features = ["stm32f042"]}

[dev-dependencies]
panic-halt  = "0.2"
#panic-semihosting = "0.5.3"

#[dependencies.stm32g0]
#version = "0.12.1"
#features = ["rt"]

#[dependencies.lpc55-hal]
#version = "0.0.4"
#features = ["rt"]

#[features]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
